--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
   "builds": [
     {
       "src": "api/**/*.ts",
-      "use": "@vercel/node@3.0.7"
+      "use": "@vercel/node"
     },
     {
       "src": "package.json",
-      "use": "@vercel/static-build@2.6.0",
+      "use": "@vercel/static-build",
       "config": {
         "buildCommand": "npm run build",
         "outputDirectory": "dist/public"
@@ -15,10 +15,6 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/dist/public/$1"
